This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/18/19: Added ability to see focus area for current Navigator acquire item
on a View image and edit it with the mouse.

7/18/19: If there is a high-defocus mag calibration, the display of
Focus/Trial areas on a View image will now be adjusted for it.

7/18/19: Added Black - White and estimated image mean values to the image
display.

7/15/19: Added button to Navigator to save Focus area position as part of the
item for any item being acquired, so no state needs to be set.  The axis
rotation is also saved, as it is in a state now.

7/15/19: Started keeping track of overview binning for each montage that is
open so it isn't reset when switching between files.

7/13/19: Changed drift waiting task in various ways and integrated it into
tilt series operation.

7/13/19: When the low dose axis is free to rotae from the tilt axis, clicking
a View image when defining Focus or Trial position will rotate the axis and
change the position of the area.  Clicking in a View image now works for an
image in any buffer and for a read-in image.

7/12/19: Increased number of montage pieces for which pieces can be aligned
can to 512 (In 3.7).

7/9/19: Stored calibration of coma versus image shift in IS units instead of
microns so it will work on JEOLs (In 3.7).

7/9/19: Fixed getting an initial partial sum during tilt series in Low Dose
mode; fixed frames not being aligned when property TSEarlyK2RecordReturn is
set; eliminated error report from trying to save the frame stack mdoc twice
after an early return.  (In 3.7).

7/4/19: Kept the Navigator table selection the same after a merge (In 3.7).

7/8/19: Added support for variable-speed tilting on older Tecnais.

7/8/19: Increased number of scripts to 40.
