@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/26/19: Made the message boxes in the New Map routine the kind that can close
+valves and be suppressed by scripts (In 3.7).
+
 7/18/19: Added ability to see focus area for current Navigator acquire item
 on a View image and edit it with the mouse.
 
